@@ -1,3 +1,6 @@
+* 2006-10-20 Jeremy Sanders <jeremy@jeremysanders.net>
+  - Remember printer name from previous prints
+	
 * 2006-08-02 Jeremy Sanders <jeremy@jeremysanders.net>
   - Fix stylesheet editing UI problem
 	
